@@ -25,6 +25,7 @@
 * Bogus gateway: Add authorization to purchase response [hron]
 * Bluepay gateway: Fix Check support; general cleanup [ntalbott]
 * Dwolla: Fix security issues and enable guest checkout [capablemonkey, schonfeld]
+* SagePay gateway: Per-transaction 3D-secure selection [ExxKA]
 
 == Version 1.32.1 (April 4, 2013)
 
